# pythonseleniumproject

./: .env  .gitignore  README.md  command.txt  pretty.output  requirements.txt  run_behave.py  setup.cfg
.github/Workflows/: ci.yml
features/: Ajax.feature  environment.py  example.feature
features/steps/: ajaxsteps.py  example_steps.py  homepage_steps.py  step_definitions.py
pages/: ajax_form_page.py  base_page.py  home_page.py
utils/: config.py
