[metadata]
name = python-selenium-bdd-framework
version = 0.1
description = A Behavior-Driven Development framework for web application automation using Selenium and Behave.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/python-selenium-bdd-framework
license = MIT

[options]
packages = find:
install_requires =
    selenium
    behave
    pytest

[tool:pytest]
addopts = --maxfail=1 --disable-warnings -q

[behave]
default_tags = ~@wip
format = pretty
log_dir = logs
log_level = INFO